// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container/CartContainer <CartContainer {...} /> Should be able to display a product 1`] = `
<div>
  <div
    class="w-full space-y-4 lg:flex lg:justify-start lg:space-x-3 lg:space-y-0"
  >
    <div
      class="bg-white border border-gray-300 rounded-lg p-4 shadow-md inline-block relative min-h-[16rem] w-full"
    >
      <h3
        class="text-base text-black font-bold pb-2"
      >
        Shopping Cart
      </h3>
      <ul
        class="w-full flex border-b border-t border-b-dark border-t-dark"
      >
        <li
          class="w-full px-2 py-2 text-center md:text-left"
        >
          <span
            class=""
          >
            Item
          </span>
        </li>
        <li
          class="w-full max-w-[8rem] px-2 py-2 hidden md:block"
        >
          <span
            class=""
          >
            Price
          </span>
        </li>
        <li
          class="w-full max-w-[8rem] px-2 py-2 hidden md:block"
        >
          <span
            class=""
          >
            Quantity
          </span>
        </li>
        <li
          class="w-full max-w-[12rem] px-2 py-2 hidden md:block"
        >
          <span
            class=""
          >
            Subtotal
          </span>
        </li>
      </ul>
      <ul
        class="w-full h-auto min-h-[6rem] border-b border-b-dark px-2 py-2 md:flex md:justify-start"
      >
        <li
          class="w-full md:flex md:justify-start md:space-x-2 max-h-[10rem] overflow-hidden"
        >
          <img
            alt="Iphone"
            class="w-auto h-auto rounded-lg min-w-[9rem] md:max-w-[8rem] border border-gray-300 mx-auto md:m-0"
            data-nimg="1"
            decoding="async"
            fetchpriority="high"
            height="0"
            sizes="100vw"
            src="/_next/image?url=https%3A%2F%2Fi.dummyjson.com%2Fdata%2Fproducts%2F59%2Fthumbnail.jpg&w=3840&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fi.dummyjson.com%2Fdata%2Fproducts%2F59%2Fthumbnail.jpg&w=640&q=75 640w, /_next/image?url=https%3A%2F%2Fi.dummyjson.com%2Fdata%2Fproducts%2F59%2Fthumbnail.jpg&w=750&q=75 750w, /_next/image?url=https%3A%2F%2Fi.dummyjson.com%2Fdata%2Fproducts%2F59%2Fthumbnail.jpg&w=828&q=75 828w, /_next/image?url=https%3A%2F%2Fi.dummyjson.com%2Fdata%2Fproducts%2F59%2Fthumbnail.jpg&w=1080&q=75 1080w, /_next/image?url=https%3A%2F%2Fi.dummyjson.com%2Fdata%2Fproducts%2F59%2Fthumbnail.jpg&w=1200&q=75 1200w, /_next/image?url=https%3A%2F%2Fi.dummyjson.com%2Fdata%2Fproducts%2F59%2Fthumbnail.jpg&w=1920&q=75 1920w, /_next/image?url=https%3A%2F%2Fi.dummyjson.com%2Fdata%2Fproducts%2F59%2Fthumbnail.jpg&w=2048&q=75 2048w, /_next/image?url=https%3A%2F%2Fi.dummyjson.com%2Fdata%2Fproducts%2F59%2Fthumbnail.jpg&w=3840&q=75 3840w"
            style="color: transparent;"
            width="0"
          />
          <h3
            class="product-heading hover:underline hover:cursor-pointer text-center md:text-left"
          >
            <span
              class="text-black text-sm"
            >
              1x 
            </span>
            Iphone
          </h3>
        </li>
        <li
          class="w-full flex justify-center space-x-2 md:justify-start md:max-w-[8rem]"
        >
          <h3
            class="md:hidden"
          >
            Price: 
          </h3>
          <div
            class=""
          >
            <span
              class="price-label"
            >
              €20.00
            </span>
          </div>
        </li>
        <li
          class="w-2/3 px-2 pt-2 mx-auto md:w-full md:max-w-[8rem] md:p-0"
        >
          <div
            class="flex justify-center items-center bg-gray-100 rounded-md border border-gray-400 undefined"
          >
            <button
              class="text-xl w-20 text-red-400 font-medium border-r border-r-gray-400"
            >
              -
            </button>
            <span
              class="w-full px-1  text-center"
            >
              1
            </span>
            <button
              class="text-xl w-20  text-green-400 font-medium border-l border-l-gray-400"
            >
              +
            </button>
          </div>
        </li>
        <li
          class="w-full md:max-w-[12rem] relative"
        >
          <div
            class="w-full flex items-center justify-center space-x-2 py-2 md:py-0 md:flex-col"
          >
            <h3
              class="md:hidden"
            >
              Subtotal: 
            </h3>
            <div
              class=""
            >
              <span
                class="price-label"
              >
                €20.00
              </span>
            </div>
          </div>
          <div
            class="text-black text-sm text-center md:text-left md:absolute md:bottom-0.5 md:right-0"
          >
            <span
              class="hover:underline hover:cursor-pointer hover:text-dark"
              data-testid="btn-remove"
            >
              Remove
            </span>
             / 
            <span
              class="hover:underline hover:cursor-pointer hover:text-dark"
              data-testid="btn-wish-list"
            >
              Wish list
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="bg-white border border-gray-300 rounded-lg p-4 shadow-md inline-block relative max-h-[16rem] w-full lg:w-auto"
    >
      <div
        class="p-2"
      >
        <h3
          class="px-3 py-3 text-center text-base text-black border-b border-b-dark"
        >
          1 Items in your Bag
        </h3>
        <p
          class="py-2 mb-4 border-b border-b-dark uppercase flex justify-between items-center"
        >
          <span
            class="font-bold text-md text-black"
          >
            total 
          </span>
          <span
            class="font-medium text-md text-black"
          >
            €1.00
          </span>
        </p>
        <div
          class="relative w-full rounded-md w-full h-10 mb-4 mx-auto max-w-xl border border-gray-500"
        >
          <input
            class="h-full px-6 w-full rounded-lg bg-white text-slate-700 ease-in duration-200 focus:bg-white"
            placeholder="Enter a promocode"
            type="text"
          />
        </div>
        <button
          class="cursor-pointer bg-green-600 text-white font-bold uppercase bg-primary hover:bg-hover hover:shadow-lg transition transform active:scale-90 duration-200 ease-in w-full px-4 py-1.5 flex justify-center items-center gap-2 rounded-none"
        >
          Checkout
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Container/CartContainer <CartContainer {...} /> Should render a default state of the Component 1`] = `
<div>
  <div
    class="w-full space-y-4 lg:flex lg:justify-start lg:space-x-3 lg:space-y-0"
  >
    <div
      class="bg-white border border-gray-300 rounded-lg p-4 shadow-md inline-block relative min-h-[16rem] w-full"
    >
      <h3
        class="text-base text-black font-bold pb-2"
      >
        Shopping Cart
      </h3>
      <ul
        class="w-full flex border-b border-t border-b-dark border-t-dark"
      >
        <li
          class="w-full px-2 py-2 text-center md:text-left"
        >
          <span
            class=""
          >
            Item
          </span>
        </li>
        <li
          class="w-full max-w-[8rem] px-2 py-2 hidden md:block"
        >
          <span
            class=""
          >
            Price
          </span>
        </li>
        <li
          class="w-full max-w-[8rem] px-2 py-2 hidden md:block"
        >
          <span
            class=""
          >
            Quantity
          </span>
        </li>
        <li
          class="w-full max-w-[12rem] px-2 py-2 hidden md:block"
        >
          <span
            class=""
          >
            Subtotal
          </span>
        </li>
      </ul>
      <h3
        class="px-3 py-3 text-center text-lg text-black mt-16"
      >
        Empty!
      </h3>
    </div>
    <div
      class="bg-white border border-gray-300 rounded-lg p-4 shadow-md inline-block relative max-h-[16rem] w-full lg:w-auto"
    >
      <div
        class="p-2"
      >
        <h3
          class="px-3 py-3 text-center text-base text-black border-b border-b-dark"
        >
          0 Items in your Bag
        </h3>
        <p
          class="py-2 mb-4 border-b border-b-dark uppercase flex justify-between items-center"
        >
          <span
            class="font-bold text-md text-black"
          >
            total 
          </span>
          <span
            class="font-medium text-md text-black"
          >
            ---
          </span>
        </p>
        <div
          class="relative w-full rounded-md w-full h-10 mb-4 mx-auto max-w-xl border border-gray-500"
        >
          <input
            class="h-full px-6 w-full rounded-lg bg-white text-slate-700 ease-in duration-200 focus:bg-white"
            disabled=""
            placeholder="Enter a promocode"
            type="text"
          />
        </div>
        <button
          class="cursor-not-allowed opacity-50 active:scale-100 bg-green-600 text-white font-bold uppercase bg-primary hover:bg-hover hover:shadow-lg transition transform active:scale-90 duration-200 ease-in w-full px-4 py-1.5 flex justify-center items-center gap-2 rounded-none"
          disabled=""
        >
          Checkout
        </button>
      </div>
    </div>
  </div>
</div>
`;
